Prevent visual jumps when editing the change description.
The line-height of the label for the change description field in the
unified banner wasn't enforcing a match between the text and the edit
icon, which meant that the UI would jump a few pixels when entering edit
mode (which hides the icon). Setting this explicitly makes it so things
don't reflow when that icon appears or disappears.

Testing Done:
Entered/exited edit mode for the change description and saw that
everything stayed in one place.

Reviewed at https://reviews.reviewboard.org/r/12953/

--- a/reviewboard/static/rb/css/ui/banners.less
+++ b/reviewboard/static/rb/css/ui/banners.less
@@ -136,6 +136,11 @@
   &__changedesc {
     padding-bottom: @banner-padding;
 
+    label {
+      // Match to the height of rb-icon-edit to prevent jumps.
+      line-height: @rb-icon-edit-height;
+    }
+
     p {
       margin: 0 0 @banner-padding;
     }
